# cs2parser

./: .gitignore  .npmignore  .release-please-manifest.json  ACKNOWLEDGEMENTS  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  benchmark.md  eslint.config.js  header.ts  package-lock.json  package.json  release-please-config.json  serverinfo.ts  stream.ts  tsconfig.json  tsdown.config.ts
.github/workflows/: benchmark.yml  build-native.yml  ci.yml  pr-title.yml  release.yml
crates/native/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
crates/native/npm/darwin-arm64/: package.json
crates/native/npm/darwin-x64/: package.json
crates/native/npm/linux-arm64-gnu/: package.json
crates/native/npm/linux-x64-gnu/: package.json
crates/native/npm/linux-x64-musl/: package.json
crates/native/npm/win32-x64-msvc/: package.json
crates/native/src/: bitbuffer.rs  classinfo.rs  entity_parser.rs  fieldpath.rs  frame_loop.rs  lib.rs  quantized_float.rs  string_tables.rs
docs/: smoke-voxel-format.md
examples/: broadcast.ts  chat.ts  header.ts  relay.ts  serverinfo.ts  stream.ts  stream_output.txt  voicedata.ts
scripts/: benchmark-readme.ts  benchmark-run.ts  benchmark.ts  capture-broadcast-fixture.ts  dump-event-descriptors.ts  generate-entity-types.ts  probe-array-decoding.ts  probe-broadcast.ts  probe-class-field-counts.ts  probe-inferno-fields.ts  probe-typed-entity.ts  sync-package-versions.ts
src/: index.ts
src/broadcast/: defaultEventDescriptors.ts  errors.ts  fetcher.ts  httpReader.ts  index.ts  sync.ts
src/helpers/: entityHelper.ts  (+7 more)
(+58 files in other folders)
